--- a/NewsTerm-Universal/NewsTerm-Universal.csproj
+++ b/NewsTerm-Universal/NewsTerm-Universal.csproj
@@ -102,6 +102,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RefreshableListView.cs" />
     <Compile Include="ViewModels\ItemModel.cs" />
     <Compile Include="WebViewHelper.cs" />
   </ItemGroup>
