Change the font weight on read items in the list

--- a/NewsTerm-Universal/NewsTerm-Universal.csproj
+++ b/NewsTerm-Universal/NewsTerm-Universal.csproj
@@ -98,6 +98,7 @@
     <Compile Include="DetailPage.xaml.cs">
       <DependentUpon>DetailPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="FontWeightBindingConverter.cs" />
     <Compile Include="ItemList.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
